<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/txt_weather_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/font_large_size"
            android:textColor="@color/text_white"
            android:text="@string/weather_current_temp" />

        <TextView
            android:id="@+id/txt_weather_type"
            android:layout_below="@+id/txt_weather_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/text_white"
            android:text="晴转多云"/>

        <TextView
            android:id="@+id/txt_weather_wind"
            android:layout_below="@+id/txt_weather_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/text_white"
            android:text="@string/weather_wind"/>

        <FrameLayout
            android:id="@+id/layout_weather_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/weather_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/weather_sunny" />

            <ImageView
                android:id="@+id/weather_image_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/weather_cloudy"
                android:visibility="gone"/>

        </FrameLayout>

        <TextView
            android:id="@+id/txt_weather_area_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/text_hightlight"
            android:textSize="@dimen/font_medium"
            android:text="@string/weather_city"/>

    </RelativeLayout>

    <View
        android:layout_marginTop="13dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/listview_divider_color"/>

    <GridView
        android:layout_marginTop="10dp"
        android:id="@+id/grid_weather_forecast"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:numColumns="7"/>

</LinearLayout>
